--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -69,6 +69,14 @@
         }
       ]
     },
+    "dev": {
+      "name": "dev",
+      "steps": [
+        {
+          "exec": "uvicorn taskman.main:app --reload"
+        }
+      ]
+    },
     "eject": {
       "name": "eject",
       "description": "Remove projen from the project",
