--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -9,5 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Print Hello World
+      - name: Install pylint
+        run: pip install pylint
+      - name: Run pylint
         run: pylint taskman
