run one after another

--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -10,5 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run pylint
-        run: pip install pylint
-             pylint taskman
+        run: pip install pylint && pylint taskman
