--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -16,5 +16,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
+      - name: Install pylint
+        run: pip install pylint
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Run pylint
-        run: pip install pylint && pylint taskman
+        run: pylint taskman
