chore: automatic reload inside docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,13 @@ version: "3.9"
 services:
   taskman:
     build: .
+    restart: always
+    command: bash -c "uvicorn taskman.main:app --reload --host 0.0.0.0 --port 8080"
+    volumes:
+      - .:/code
     ports:
       - "8080:80"
+    depends_on:
+      - redis
   redis:
     image: "redis:alpine"
