feat: add redis as backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     volumes:
       - .:/code
     ports:
-      - "8080:80"
+      - "8080:8080"
     depends_on:
       - redis
   redis:
-    image: "redis:alpine"
+    image: "redislabs/redismod"
