--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@ tasks:
   - name: taskman application
     command: projen dev
   - name: Redis
-    command: redis-server
+    command: docker run -p 6379:6379 -p 8001:8001 redis/redis-stack:latest
 
 ports:
     - name: Backend
