--- a/.github/workflows/pull-request-test.yaml
+++ b/.github/workflows/pull-request-test.yaml
@@ -1,4 +1,4 @@
-name: Run test suite on PR
+name: Check with linter on PR
 
 on:
   pull_request:
@@ -6,18 +6,42 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: set up Python 
+
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
+
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Install development dependencies
         run: pip install -r requirements-dev.txt
-      - name: Run pytest
-        run: pytest --cov=taskman -n auto
+        
+      #Exercise 1
+      #1- incorporate pytest-cov into our test run.
+      - name: Install pytest-xdist
+        run: pip install pytest-xdist
+
+      - name: Upgrade pytest
+        run: pip install --upgrade pytest
+
+      - name: Parallel tests
+        run: pytest -n auto
+
+      - name: Run pylint
+        run: pylint taskman
+
+       #Exercise 2 
+       #2- Submit the results to a service measuring the code by CODE-CV
+      - name: Upload coverage report to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECV_TOKEN }}
