--- a/.github/workflows/pull-request-test.yaml
+++ b/.github/workflows/pull-request-test.yaml
@@ -12,6 +12,7 @@ jobs:
         with:
           fetch-depth: 0
 
+      #Exercise 1
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -25,7 +26,6 @@ jobs:
       - name: Install development dependencies
         run: pip install -r requirements-dev.txt
         
-      #Exercise 1
       #1- pytest-cov into our test run.
       - name: Install pytest-xdist
         run: pip install pytest-xdist
@@ -52,3 +52,15 @@ jobs:
         uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECV_TOKEN }}
+
+    #3- Integrate a security scanner into the pipeline that analyses our code and dependencies by snyk.
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - name: Install snyk
+        run: npm install -g snyk
+      - name: Scan for security vulnerabilities
+        run: |
+          snyk auth ${{ secrets.SNYK_TOKEN }}
+          snyk test --file=requirements.txt
