--- a/.github/workflows/pull-request-test.yaml
+++ b/.github/workflows/pull-request-test.yaml
@@ -59,8 +59,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-          
-      - name: Install snyk
+
+      - name: Install Snyk
         run: npm install -g snyk
 
       - name: Scan for security vulnerabilities
