--- a/.github/workflows/pull-request-test.yaml
+++ b/.github/workflows/pull-request-test.yaml
@@ -81,4 +81,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/hs-heilbronn-devsecop-kis/my_package:${{ github.sha }}
+          tags: ghcr.io/${{ github.repository }}:${{ github.sha }}
