--- a/.github/workflows/pull-request-test.yaml
+++ b/.github/workflows/pull-request-test.yaml
@@ -7,6 +7,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest  
+    permissions:
+      packages: write
     steps:
       - uses: actions/checkout@v2
         with:
@@ -81,4 +83,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:${{ github.sha }}
+          tags: ghcr.io/hs-heilbronn-devsecop-kis/my_package:${{ github.sha }}
