--- a/.github/workflows/deploy-to-cloud-run.yaml
+++ b/.github/workflows/deploy-to-cloud-run.yaml
@@ -22,7 +22,7 @@ jobs:
       uses: 'google-github-actions/deploy-cloudrun@v1'
       with:
         service: 'hello-cloud-run'
-        image: 'gcr.io/cloudrun/hello'
+        source: '.'
 
     - name: 'Use output'
       run: 'curl "${{ steps.deploy.outputs.url }}"'
