Authentication to Google Cloud

--- a/.github/workflows/pull-request-test.yaml
+++ b/.github/workflows/pull-request-test.yaml
@@ -7,8 +7,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest  
+    env:
+      CI: true
     permissions:
       packages: write
+   
     steps:
       - uses: actions/checkout@v2
         with:
@@ -84,9 +87,18 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/hs-heilbronn-devsecop-kis/my_package:${{ github.sha }}
-          
-      - name: Authenticate to Google Cloud
+
+      #5 - Authentication to Google Cloud
+      - name: Authentication to Google Cloud
         uses: 'google-github-actions/auth@v1'
         with:
           workload_identity_provider: 'projects/70756149774/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
           service_account: 'hshn-devsecops-service-account@hs-heilbronn-devsecops.iam.gserviceaccount.com'
+
+      # - name: Google Auth
+      #   id: auth 
+      #   uses: 'google-github-actions/auth@v1'
+      #   with:
+      #     workload_identity_provider: '${{ secrets.HS_PROVIDER }}'
+      #     service_account: '${{ secrets.HS_SERVICE_ACCOUNT }}
+
