--- a/.github/workflows/pull-request-test.yaml
+++ b/.github/workflows/pull-request-test.yaml
@@ -11,7 +11,7 @@ jobs:
       CI: true
     permissions:
       packages: write
-   
+      id-token: 'write'
     steps:
       - uses: actions/checkout@v2
         with:
@@ -87,10 +87,11 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/hs-heilbronn-devsecop-kis/my_package:${{ github.sha }}
-
+          
       #5 - Authentication to Google Cloud
-      - name: Authentication to Google Cloud
-        uses: 'google-github-actions/auth@v1'
+      - id: 'auth'
+        name: Authentication to Google Cloud
+        uses: 'google-github-actions/auth@v0.4.0'
         with:
           workload_identity_provider: 'projects/70756149774/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
           service_account: 'hshn-devsecops-service-account@hs-heilbronn-devsecops.iam.gserviceaccount.com'
