--- a/.github/workflows/pull-request-test.yaml
+++ b/.github/workflows/pull-request-test.yaml
@@ -94,5 +94,4 @@ jobs:
         uses: 'google-github-actions/auth@v0.4.0'
         with:
           workload_identity_provider: '${{ secrets.HS_PROVIDER }}'
-          service_account: '${{ secrets.HS_SERVICE_ACCOUNT }}
-  
+          service_account: '${{ secrets.HS_SERVICE_ACCOUNT }}'
