--- a/.github/workflows/Exercise_2.yaml
+++ b/.github/workflows/Exercise_2.yaml
@@ -12,29 +12,13 @@ jobs:
     runs-on: ubuntu-latest  
     env:
       CI: true
-      REGION: europe-west3
     permissions:
       packages: write
-      id-token: 'write'
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      #Exercise 1
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Install development dependencies
-        run: pip install -r requirements-dev.txt
-        
       #1- pytest-cov into our test run.
       - name: Install pytest-xdist
         run: pip install pytest-xdist
@@ -92,30 +76,6 @@ jobs:
           push: true
           # tags: ghcr.io/hs-heilbronn-devsecop-kis/my_package:${{ github.sha }}
           tags: ghcr.io/hs-heilbronn-devsecop-kis/taskman:latest
-        if: github.event.pull_request.merged == true
+        # if: github.event.pull_request.merged == true
 
-    #Exercise 3
-    
-      #1 - Authentication to Google Cloud
-      - id: 'auth'
-        name: Authentication to Google Cloud
-        uses: 'google-github-actions/auth@v0.4.0'
-        with:
-          workload_identity_provider: '${{ secrets.HS_PROVIDER }}'
-          service_account: '${{ secrets.HS_SERVICE_ACCOUNT }}'
-          
-      #2 - Authentication to Google Cloud
-      - id: 'deploy'
-        name: Deploy to Cloud Run
-        uses: 'google-github-actions/deploy-cloudrun@v1'
-        with:
-          service: 'taskman-hs-heilbronn-devsecop-kis'
-          source: '.'
-          # image: europe-west3-docker.pkg.dev/hs-heilbronn-devsecops/cloud-run-source-deploy/taskman-hs-heilbronn-devsecop-kis@sha256:90bbf504abd3c264ccfe40b111e3617e2e2ff58fee9c12c8f97b904db3274fac
-          # image: ghcr.io/hs-heilbronn-devsecop-kis/my_package:5c45e948ed9dde7ef9504bdcf1eb36db4155a8db:latest
-          region: ${{env.REGION}}
-          env_vars:
-            BACKEND=memory
-
-      - name: 'Use output'
-        run: 'curl "${{ steps.deploy.outputs.url }}"'
+  
