--- a/.github/workflows/dev-ops-secops.yaml
+++ b/.github/workflows/dev-ops-secops.yaml
@@ -14,6 +14,7 @@ jobs:
       CI: true
       REGION: europe-west3
     permissions:
+      contents: 'read'
       packages: write
       id-token: 'write'
     steps:
@@ -94,4 +95,28 @@ jobs:
         #   tags: ghcr.io/hs-heilbronn-devsecop-kis/taskman:latest
         # if: github.event.pull_request.merged == true
 
-  
+    #Exercise 3
+    
+        #1 - Authentication to Google Cloud
+      - id: 'auth'
+        name: Authentication to Google Cloud
+        uses: 'google-github-actions/auth@v0.4.0'
+        with:
+          workload_identity_provider: '${{ secrets.HS_PROVIDER }}'
+          service_account: '${{ secrets.HS_SERVICE_ACCOUNT }}'
+          
+      #2 - Authentication to Google Cloud
+      - id: 'deploy'
+        name: Deploy to Cloud Run
+        uses: 'google-github-actions/deploy-cloudrun@v1'
+        with:
+          service: 'taskman-hs-heilbronn-devsecop-kis'
+          source: '.'
+          # image: europe-west3-docker.pkg.dev/hs-heilbronn-devsecops/cloud-run-source-deploy/taskman-hs-heilbronn-devsecop-kis@sha256:134c8ec9a373253d6f5d36207212bf713d1399302d0ab7925c44e5f1d184942c
+          # image: ghcr.io/hs-heilbronn-devsecop-kis/my_package:5c45e948ed9dde7ef9504bdcf1eb36db4155a8db:latest
+          region: ${{env.REGION}}
+          env_vars:
+            BACKEND=memory
+
+      - name: 'Use output'
+        run: 'curl "${{ steps.deploy.outputs.url }}"'
