--- a/.github/workflows/dev-ops-secops.yaml
+++ b/.github/workflows/dev-ops-secops.yaml
@@ -138,13 +138,19 @@ jobs:
           images: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
             kashafu/hs-heilbronn-devsecop-kis
+          flavor: latest=true
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          # tags: ${{ steps.meta.outputs.tags }}
+          tags: latest
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Authentication to Cloud Run
@@ -158,6 +164,6 @@ jobs:
         uses: 'google-github-actions/deploy-cloudrun@v1'
         with:
          service: 'taskman-hs-heilbronn-devsecop-kis'
-         image: 'docker.io/kashafu/hs-heilbronn-devsecop-kis-taskman:main'
+         image: 'docker.io/kashafu/hs-heilbronn-devsecop-kis-taskman:latest'
          env_vars: BACKEND=memory
          region: ${{env.REGION}}
