--- a/.github/workflows/dev-ops-secops.yaml
+++ b/.github/workflows/dev-ops-secops.yaml
@@ -27,25 +27,30 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Python 
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
 
-      - name: Install pylint
-        run: pip install pylint
-
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Install development dependencies
         run: pip install -r requirements-dev.txt
 
-      - name: Run pytest
-        run: pytest --cov=taskman -n auto
+      - name: Install pytest-xdist
+        run: pip install pytest-xdist
 
-      # - name: Run pylint
-      #   run: pylint taskman
+      - name: Upgrade pytest
+        run: pip install --upgrade pytest
+
+      - name: Parallel tests
+        run: pytest -n auto
+
+      - name: Run pylint
+        run: pylint taskman
 
        #Exercise 2 
 
