Commit for block 4 - trace

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,3 +17,9 @@ github:
         master: true
         pullRequests: false
         addComment: false
+
+jetbrains:
+  intellij:
+    plugins:
+      - Pythonid
+      
