--- a/.github/workflows/dev-ops-secops.yaml
+++ b/.github/workflows/dev-ops-secops.yaml
@@ -49,8 +49,8 @@ jobs:
       - name: Parallel tests
         run: pytest -n auto
 
-      - name: Run pylint
-        run: pylint taskman
+      # - name: Run pylint
+      #   run: pylint taskman
 
        #Exercise 2 
 
