Updating codeCov for test cases of main

--- a/.github/workflows/dev-ops-secops.yaml
+++ b/.github/workflows/dev-ops-secops.yaml
@@ -53,6 +53,7 @@ jobs:
         run: |
          pip install codecov
          pip install pytest-cov
+         pip3 install httpx
          pytest --cov=./ --cov-report=xml
          codecov
 
